--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,18 @@
-apex==0.9.10dev
 av~=13.1.0
 decord==0.6.0
-deepspeed==0.10.1
 einops==0.7.0
 flash_attn==2.0.8
-fvcore==0.1.5.post20221221
-imageio==2.31.1
-librosa==0.10.1
-numpy~=2.1.3
+numpy~=2.0.2
 opencv_python==4.8.0.76
-pandas==2.0.3
-# petrel_oss_sdk==v2.2.1_2_g1505ef3_master
-Pillow~=10.2.0
+Pillow~=10.3.0
 psutil==5.9.5
 PyYAML==6.0.1
-scipy==1.13.0
-soundfile==0.12.1
-# tensorflow==2.16.1
-termcolor==2.4.0
 timm==0.5.4
 torch~=2.5.1+cu124
 torchaudio==0.13.1+cu117
 torchvision==0.14.1+cu117
 tqdm~=4.67.0
 transformers~=4.46.3
-wandb==0.16.1
-
 openai~=1.55.3
 Flask~=3.1.0
 Flask-Cors~=5.0.0
@@ -33,3 +20,4 @@ Werkzeug~=3.1.3
 matplotlib~=3.9.2
 opencv-python~=4.10.0.84
 python-dotenv~=1.0.1
+spacy~=3.8.2
